# artifacts-artefacts

./: .flake8  .frogbot-config.yml  .gitignore  .mergify.yml  .textlintrc  .textlintrc.json  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  generate_chart.js  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/docker-env/: devcontainer.json
.devcontainer/go-env/: devcontainer.json
.devcontainer/java-env/: devcontainer.json
.devcontainer/node-env/: devcontainer.json
.devcontainer/python-env/: devcontainer.json
.github/ISSUE_TEMPLATE/: CONTRIBUTING.md  bug.yml  config.yml  epic.yml  feature.yml  task.yml
.github/linters/: .jscpd.json  .textlintrc.json
.github/workflows/: aaa  add-to-aurora.yaml  calculate-public-usage.yml  cc-code-scanning.yml  java-app.yml  jfrogbot.yml  node-app.yml  pr-code-scanning.yml  python-app.yml  super-linter.yml  sync-issue-templates.yaml  test-oidc-permissions.yml  update-chainguard-digests.yml
data/: usage.csv
docs/: artifactory-standards.md  chainguard-images.md  frequently-asked-questions.md  github-oidc-guide.md  quickstart.md
examples/java-app/: Dockerfile.chainguard  Dockerfile.standard
examples/node-app/: Dockerfile.chainguard  Dockerfile.standard  app.js
java-app/: Dockerfile.chainguard  Dockerfile.standard  pom.xml
node-app/: Dockerfile.chainguard  Dockerfile.standard  app.js  package.json
python-app/: Dockerfile.chainguard  Dockerfile.standard  app.py
scripts/: generate_graph.py
stats/: usage.csv
xray-policies/: license-policy.json  operational-policy.json  security-policy.json
(+5 files in other folders)
