[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifacts-artefacts-scripts"
version = "0.1.0"
description = "Utility scripts for GC Secure Artifacts repository"
authors = [
    {name = "SSC DevOps", email = "devops.artifacts-artefacts.devops@ssc-spc.gc.ca"}
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["scripts*"]
exclude = ["stats*", "venvdir*", "examples*", ".github*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.black]
line-length = 88
